--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ serialization = "1.9.0"
 hilt = "2.57.1"
 # Media3
 media3 = "1.8.0"
+# Navigation
+navigation = "2.9.4"
 # Plugins
 ksp = "2.2.20-2.0.3"
 
@@ -57,6 +59,8 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.r
 media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
 media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3" }
 media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3" }
+# Navigation
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
