--- a/automotive/src/main/AndroidManifest.xml
+++ b/automotive/src/main/AndroidManifest.xml
@@ -6,12 +6,18 @@
         android:required="true" />
 
     <application
+        android:name=".AutomotiveApp"
         android:allowBackup="true"
         android:appCategory="audio"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TheFunkyWack" />
+        android:theme="@style/Theme.TheFunkyWack">
+
+        <meta-data android:name="com.android.automotive"
+            android:resource="@xml/automotive_app_desc"/>
+
+    </application>
 
 </manifest>
