Add default android.media.browse.MediaBrowserService intent filter so basic media players (like Automotive media player) can detect our content

--- a/service/playback/src/main/AndroidManifest.xml
+++ b/service/playback/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
     <application>
         <service
             android:name="nl.stoux.tfw.service.playback.service.MediaPlaybackService"
-            android:exported="false"
+            android:exported="true"
             android:foregroundServiceType="mediaPlayback">
             <!-- Declare as a MediaLibraryService so SessionToken validation passes -->
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaLibraryService" />
+                <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
         </service>
     </application>
