--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheFunkyWack">
 
+        <meta-data
+            android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
+            android:value="nl.stoux.tfw.CastOptionsProvider" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
