Support sharing & opening TFW timestamped Liveset links
Closes #17

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,22 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TheFunkyWack">
+            android:theme="@style/Theme.TheFunkyWack"
+            android:launchMode="singleTask">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <!-- App Links intent-filter for tfw.stoux.nl (http and https) -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="https" android:host="tfw.stoux.nl" />
+                <data android:scheme="http" android:host="tfw.stoux.nl" />
             </intent-filter>
         </activity>
     </application>
