--- a/service/playback/src/main/AndroidManifest.xml
+++ b/service/playback/src/main/AndroidManifest.xml
@@ -5,10 +5,16 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <!-- Required for apps targeting API 34+ to run a media playback foreground service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <!-- Required for download service on API 34+ -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <!-- Recommended for keeping CPU on during playback -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- Needed to stream media over network -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Needed to check network state for download decisions -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Needed for download service to schedule restarts -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application>
         <service
@@ -19,6 +25,17 @@
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaLibraryService" />
                 <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
+
+        <!-- Download service for offline liveset downloads -->
+        <service
+            android:name="nl.stoux.tfw.service.playback.download.TfwDownloadService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync">
+            <intent-filter>
+                <action android:name="androidx.media3.exoplayer.downloadService.action.RESTART" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
     </application>
