Use separate secrets.prod.properties for release builds

--- a/secrets.properties.example
+++ b/secrets.properties.example
@@ -1,4 +1,7 @@
 # Copy this file to secrets.properties and fill in your values
-# secrets.properties is gitignored and won't be committed
+# Both secrets.properties and secrets.prod.properties are gitignored
+#
+# secrets.properties      - used for debug builds
+# secrets.prod.properties - used for release builds (falls back to secrets.properties)
 
 SENTRY_DSN=https://your-key@o123456.ingest.sentry.io/1234567
