--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
         <meta-data android:name="io.sentry.traces.user-interaction.enable" android:value="true" />
         <meta-data android:name="io.sentry.breadcrumbs.user-interaction" android:value="true" />
 
+        <!-- Android Auto support -->
+        <meta-data
+            android:name="com.google.android.gms.car.application"
+            android:resource="@xml/automotive_app_desc" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
